<resources>
    <string name="app_name">Notes</string>
    <string name="my_notes">My Notes</string>
    <string name="note_title">note title....</string>
    <string name="note_subtitle">Note Subtitle....</string>
    <string name="type_note_here">type note here....</string>
    <string name="search_notes">search notes....</string>
    <string name="miscellaneous">miscellaneous</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_image">add image</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="delete_note2">DELETE NOTE</string>
    <string name="cancel1">CANCEL</string>
</resources>