<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/backgroud_miscellaneous"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/bottom_sheet_behavior"
    app:behavior_peekHeight="50dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/textMiscellaneous"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/colorWhite"
        android:textSize="17sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layoutNoteColor"
        android:layout_margin="15dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/bacground_note_color_1" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imageColor1"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_done"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/viewColor2"
                android:background="@drawable/bacground_note_color_2"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imageColor2"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/viewColor3"
                android:background="@drawable/bacground_note_color_3"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imageColor3"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/viewColor4"
                android:background="@drawable/bacground_note_color_4"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imageColor4"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/viewColor5"
                android:background="@drawable/bacground_note_color_5"/>

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/imageColor5"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                app:tint="@color/colorWhite" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text ="@string/pick_color"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/layoutAddImage"
        android:layout_margin="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/colorIcons"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/layoutAddUri"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web_link"
            app:tint="@color/colorIcons" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textColor="@color/colorIcons"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/layoutDeleteNote"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/colorDelete"
            android:textSize="15sp"/>

    </LinearLayout>

</LinearLayout>